# Xarcade2Jstick

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md
scripts/: 80-xarcade.rules  Makefile  Xarcade2Joystick  xarcade2jstick  xarcade2jstick.service
src/: 80-xarcade.rules  CMakeLists.txt  Makefile  input_xarcade.c  input_xarcade.h  main.c  uinput_gamepad.c  uinput_gamepad.h  uinput_kbd.c  uinput_kbd.h  xarcade2jstick.service
